Update heading with name 'tomas chen'

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <body>
   <div class="container">
     <!-- 1. Heading (Name) -->
-    <h1>Your Full Name</h1>
+    <h1>tomas chen</h1>
 
     <!-- 2. Short Bio Paragraph -->
     <p>
